Fix execution and clean up code/documentation